<resources>
    <string name="app_name">PrimeiroProjeto</string>
    <string name="imagemdefundo">imagemdefundo</string>
    <string name="chamada">Seja recompensado por ações sustentáveis</string>
    <string name="entrarcomo">Entrar como:</string>
    <string name="colaborador">Colaborador</string>
    <string name="administrador">Administrador</string>
    <string name="entre_em_sua_conta">Entre em sua conta:</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ol">Olá,</string>
    <string name="mariane_martins">Mariane Martins</string>
    <string name="textview">TextView</string>
    <string name="pontua_o">Pontuação</string>
    <string name="posi_o">Posição</string>
    <string name="a_es">Ações</string>
    <string name="_4">4</string>
    <string name="_40">40</string>
    <string name="_16">16°</string>
    <string name="registrar_nova_a_o_sustent_vel">Registrar nova ação sustentável</string>
</resources>